# gavotesbackend

./: .dockerignore  .gitignore  AbsenteeBallots.py  Dockerfile  ElectionResults.py  LICENSE  absenteeDataDownload.mjs  absenteeDataDownload.sh  absenteeResultPrecinctNameToID.py  copyToFrontEnd.sh  deploy.sh  deployFromLatest.sh  deployLatestElection.sh  electionResultPrecinctNamelToID.py  electionResultsPull.js  electionResultsPull2024.js  electionResultsPullGASpecial.sh  electionResultsSummary.py  elections.json  geoJSONBoundingBox.js  geoJSONPull.sh  geoJSONSimplify.js  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  requirements.txt  runLoop.sh  voterHistoryConvertFixedToCSV.sh  voterHistoryProcess.py
.aws/: ecs_gavotes_backend.json
.github/: renovate.json
.github/workflows/: ci.yml
dataHacky/: 2022_general_map_ids.csv  2022_runoff_map_2022_ids_manual.csv  2022_runoff_map_ids_manual.csv  GA_precincts_id_to_name.csv
