[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = [
    "argparse>=1.4.0",
    "duckdb>=1.5.3",
    "numpy==2.4.6",
    "pandas>=2.3.3,<3.0",
    "pyarrow>=24.0.0",
    "pyspark==4.1.2",
    "python-levenshtein>=0.27.3",
    "ruff>=0.15.15",
    "thefuzz>=0.22.1",
]
