[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.6"
dependencies = [
    "argparse>=1.4.0",
    "duckdb>=1.5.4",
    "numpy==2.5.1",
    "pandas>=2.3.3,<3.0",
    "pyarrow>=25.0.0",
    "pyspark==4.2.0",
    "python-levenshtein>=0.27.3",
    "ruff>=0.15.22",
    "thefuzz>=0.22.1",
]
